# rgbds-optimize

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.html  about.toml  deny.toml  optimize-port.md  optimize.py  yaml-config.md
.github/workflows/: ci.yml  parity-pokecrystal.yml
configs/: core.toml  core.yaml  packs.yaml  pret.toml  pret.yaml  rgbds.toml  rgbds.yaml
crates/optimize-cli/: Cargo.toml
crates/optimize-cli/src/: main.rs
crates/optimize-cli/tests/: parity.rs
crates/optimize-core/: Cargo.toml
crates/optimize-core/src/: lib.rs  pattern_config.rs  patterns.rs
crates/rgbds-optimize/: Cargo.toml
crates/rgbds-optimize-core/: Cargo.toml
crates/rgbds-optimize-core/src/: lib.rs  patterns.rs
crates/rgbds-optimize/src/: main.rs
crates/rgbds-optimize/tests/: parity.rs
src/: lib.rs  main.rs  pattern_config.rs  patterns.rs
tests/: parity.rs
tests/fixtures/parity/: has_matches.asm
tools/: bench.py  generate_third_party_licenses.py  parity.py  third_party_licenses.hbs
