[workspace]
resolver = "2"
members = [
  "crates/rgbds-optimize",
  "crates/rgbds-optimize-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
  "Rangi <sylvie.oukaour+rangi42@gmail.com>",
  "vulcandth <vulcandth@gmail.com>",
]
repository = "https://github.com/vulcandth/rgbds-optimize"
homepage = "https://github.com/vulcandth/rgbds-optimize"
description = "RGBDS optimize.py port: scan Game Boy RGBDS assembly for suboptimal instruction patterns."
