[package]
name = "rgbds-optimize-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
readme = "../../README.md"

[lib]
path = "src/lib.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
